Update and rename Final.ipynb to RealorFake.ipynb

--- a/RealorFake.ipynb
+++ b/RealorFake.ipynb
@@ -4,32 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Final Project For DIS Computational Analysis of Big Data"
+    "# Real or fake news headlines"
    ]
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2>Disclaimer</h2>\n",
-    "This is for educational purposes only, it should not be used to draw direct correlations between the data and the results.\n",
-    "\n",
-    "Python 3.6 or greater minimum.\n",
-    "\n",
-    "Basic Hardware Settings Used:\n",
-    "Intel Core i7 6700HQ @ 2.40GHz, Turbo up to 3.5GHz\n",
-    "\n",
-    "Allow at least 2 hours for data processing.\n",
-    "\n",
-    "16 GB RAM\n",
-    "\n",
-    "Minimum Hardware Settings:\n",
-    "4 Core CPU, 16 GB RAM\n",
-    "\n",
-    "Recommended Settings:\n",
-    "8 Core CPU, 32 GB RAM"
-   ]
-  },
+
   {
    "cell_type": "code",
    "execution_count": 1,
